[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aeroguardian-core"
version = "0.1.0"
description = "OpenSky live state-vector monitor with spoof-detection heuristics."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = ["pandas>=2.0", "pyopensky>=2.16"]
keywords = ["aviation", "opensky", "ads-b", "flight-tracking", "osint", "spoof-detection"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
]

[project.scripts]
aeroguardian-monitor = "aeroguardian.cli:main"
aeroguardian-latency-monitor = "aeroguardian.latency_cli:main"

[project.urls]
Homepage = "https://github.com/ravi923615/AeroGuardian-Core"
Repository = "https://github.com/ravi923615/AeroGuardian-Core"
Issues = "https://github.com/ravi923615/AeroGuardian-Core/issues"

[tool.setuptools.packages.find]
where = ["src"]
